--- a/public/CSS/app.css
+++ b/public/CSS/app.css
@@ -36,3 +36,13 @@ section.hero {
   border-color: #fff;
   color: #fff;
 }
+
+.btn-primary {
+  background: #fe5f1e;
+  transition: all 0.3s ease-in-out;
+}
+.btn-primary:hover {
+  background: #b23301;
+  border-color: #fff;
+  color: #fff;
+}
