--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -38,3 +38,13 @@ section.hero {
     color: $pure;
   }
 }
+
+.btn-primary {
+  background: $primary;
+  transition: $smooth;
+  &:hover {
+    background: $primary-hover;
+    border-color: $pure;
+    color: $pure;
+  }
+}
