--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -2,9 +2,11 @@
 $primary: #fe5f1e;
 $primary-hover: #b23301;
 $secondary: #f8f8f8;
+//#ece0e0
 $pure: #fff;
 $dark: #232323;
 $gray: #ccc;
 
 //Transition
 $smooth: all 0.3s ease-in-out;
+
