--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/app.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <nav class="container mx-auto flex items-center justify-between py-4">
@@ -19,12 +20,12 @@
       </div>
       <div>
         <ul class="flex items-center">
-          <li class="ml-6"><a href="http://localhost:3000/">Menu</a></li>
-          <li class="ml-6"><a href="/offer">Offer</a></li>
+          <li class="ml-6"><a href="#">Menu</a></li>
+          <li class="ml-6"><a href="#">Offer</a></li>
           <li class="ml-6"><a href="/register">Register</a></li>
           <li class="ml-6"><a href="/login">Login</a></li>
           <li class="ml-6">
-            <a href="#" class="inline-block px-4 py-2 rounded-full"
+            <a href="/cart" class="inline-block px-4 py-2 rounded-full"
               ><img src="/img/cart.png" alt=""
             /></a>
           </li>
