--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,6 @@
 @import "./variables";
-
+@import "~noty/src/noty.scss";
+@import "~noty/src/themes/mint.scss";
 body {
   font-family: "Lato", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -36,6 +37,9 @@ section.hero {
     background: $primary;
     border-color: $pure;
     color: $pure;
+  }
+  &:focus {
+    outline: none;
   }
 }
 
@@ -83,4 +87,9 @@ section.login {
       color: $primary-hover;
     }
   }
+}
+
+.noty_theme__mint {
+  border-radius: 50px !important;
+  padding-left: 8px !important;
 }
