--- a/resources/views/auth/login.ejs
+++ b/resources/views/auth/login.ejs
@@ -43,7 +43,7 @@
 
       <div class="flex items-center justify-between">
         <button
-          class="btn-primary rounded-tl-lg rounded-tr-lg rounded-bl-lg rounded-br-lg text-white font-bold py-2 px-4 focus:outline-none focus:shadow-outline"
+          class="but2 rounded-tl-lg rounded-tr-lg rounded-bl-lg rounded-br-lg text-white font-bold py-2 px-4 focus:outline-none focus:shadow-outline"
           type="submit"
         >
           Log In
