--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -24,7 +24,7 @@
           <li class="ml-6"><a href="#">Offer</a></li>
           <% if(user){ %>
           <li class="ml-6">
-            <form id="logout" action="logout" method="post"></form>
+            <form id="logout" action="/logout" method="post"></form>
             <a onclick="document.getElementById('logout').submit()" href="#"
               >Logout</a
             >
