--- a/resources/views/customers/cart.ejs
+++ b/resources/views/customers/cart.ejs
@@ -28,33 +28,38 @@
           >₹<%= session.cart.totalPrice %></span
         >
       </div>
+      <%if(user) { %>
       <div>
-        <form action="" class="mt-12">
+        <form action="/orders" method="POST" class="mt-12">
           <input
+            name="phone"
             class="border border-gray-300 p-2 w-1/2 mb-4"
             type="number"
             placeholder="Phone number"
           />
           <input
+            name="address"
             class="border border-gray-300 p-2 w-1/2"
             type="text"
             placeholder="Address"
           />
           <div>
-            <!-- <button
+            <button
               type="submit"
               class="but px-6 py-2 text-white rounded-full font-bold mt-6"
             >
               Order Now
-            </button> -->
+            </button>
           </div>
         </form>
       </div>
+      <% } else { %>
       <a
-        href=""
+        href="/login"
         class="inline-block cursor-pointer btn-primary px-6 py-2 text-white rounded-full font-bold mt-6"
         >Login to continue</a
       >
+      <% } %>
     </div>
   </div>
   <% } else { %>
