--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -13,7 +13,7 @@
       <img src="/img/hero-pizza.png" alt="" />
     </div>
   </div>
-</section>
+</section>`
 <section class="menu container mx-auto py-8">
   <h1 class="text-xl font-bold mb-8">All Pizzas</h1>
   <div class="grid grid-cols-4 gap-x-12 gap-y-16">
