--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -10,6 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="/css/app.css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
@@ -42,7 +47,6 @@
               <span id="cartCounter" class="text-white font-bold pr-2"
                 ><%= session.cart ? session.cart.totalQty : '' %></span
               >
-
               <img src="/img/cart.png" alt=""
             /></a>
           </li>
